@@ -9,6 +9,7 @@ Version 1.5.0
     * cancel upload when trying to upload non-readable files
     * GreaseMonkey: added support for GM_Settings
     * oxygen: set rounded corners for tooltips
+    * oxygen: workaround for transparent background of tooltips
     * fixed: size of preferences dialog on low-res screens
     * fixed: loading plugins with relative paths in portable build
 
